# tls-requests

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  documentation.yml  publish.yml
docs/: index.md  quickstart.md
docs/advanced/: async_client.md  authentication.md  client.md  hooks.md  proxies.md  rotators.md
docs/tls/: configuration.md  index.md  install.md  profiles.md
tests/: conftest.py  test_api.py  test_auth.py  test_cookies.py  test_encoders.py  test_headers.py  test_hooks.py  test_proxy.py  test_redirects.py  test_rotators.py  test_timeout.py  test_urls.py
tls_requests/: __init__.py  __version__.py  api.py  client.py  exceptions.py  settings.py  types.py  utils.py
tls_requests/models/: __init__.py  auth.py  cookies.py  encoders.py  headers.py  libraries.py  request.py  response.py  rotators.py  status_codes.py  tls.py  urls.py
