[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
python_requires = >=3.8
install_requires =
    chardet ~= 5.2.0
    requests ~= 2.32.3
    tqdm ~= 4.67.1
    idna ~= 3.10
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries

project_urls =
    Changelog = https://github.com/thewebscraping/tls-requests/blob/main/CHANGELOG.md
    Documentation = https://thewebscraping.github.io/tls-requests/
    Source = https://github.com/thewebscraping/tls-requests
    Homepage = https://github.com/thewebscraping/tls-requests

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    examples*
    tools*
    docs*

[flake8]
max-line-length = 120
ignore = F821, E203, W503, E501, E231
per-file-ignores =
    __init__.py: F405, F403, E402, F401

[tool.black]
line-length = 120
include = '\.pyi?$'
unstable = true


[tool.isort]
atomic = true
profile = "black"
line_length = 120
skip_gitignore = true
skip_glob = ["tests/data", "profiling"]
known_first_party = ["black", "blib2to3", "blackd", "_black_version"]
add_imports = "from __future__ import annotations"
